fix: align mega menu toggle button to right side

--- a/components/mega-menu/component.module.css
+++ b/components/mega-menu/component.module.css
@@ -1,6 +1,7 @@
 .toggleButton {
   background-color: var(--palette-transparent);
   border: 0;
+  margin-right: -0.5rem;
   padding: 0.5rem;
 }
 
